changes to prevent horizontal scrolling

--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -75,6 +75,14 @@
   cursor: pointer;
 }
 
+html,
+body {
+  overflow-x: hidden;
+}
+body {
+  position: relative;
+}
+
 .covid-bar {
   width: 100%;
   height: 50px;
